--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,11 @@
 		<param-value>true</param-value>
 	</context-param>
 
+	<!-- 
+	<context-param>
+		<param-name>javax.faces.PARTIAL_STATE_SAVING</param-name>
+		<param-value>false</param-value>
+	</context-param>
+	 -->
+	 
 </web-app>
